// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepSequenceItem /> completed render 1`] = `
<li
  aria-label="Step 1 of 5"
  className="carbon-step-sequence-item carbon-step-sequence-item--complete"
>
  <span
    className="carbon-step-sequence-item__visually-hidden"
  >
    Complete text for non visual users
  </span>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      <Icon
        bgSize="small"
        type="tick"
      />
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> current render 1`] = `
<li
  aria-current="step"
  aria-label="Step 1 of 5"
  className="carbon-step-sequence-item carbon-step-sequence-item--current"
>
  <span
    className="carbon-step-sequence-item__visually-hidden"
  >
    Current text for non visual users
  </span>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> incomplete render 1`] = `
<li
  aria-label="Step 1 of 5"
  className="carbon-step-sequence-item carbon-step-sequence-item--incomplete"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;
